src: use java 22